--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,12 +24,11 @@ jobs:
       - run: npm install
       - run: npm run build --if-present
       - name: FTP Deploy
-        uses: SamKirkland/FTP-Deploy-Action@4.0.0
+        uses: SamKirkland/FTP-Deploy-Action@4.3.0
         with:
-          server: wh-nsebvenxffxyu90uaaa.my3w.com
+          server: ftp://wh-nsebvenxffxyu90uaaa.my3w.com/htdocs
           username: ${{ secrets.ftp_user }}
           password: ${{ secrets.ftp_pwd }}
-          local-dir: ./build/
-          server-dir: ./htdocs/
+          local-dir: build/
         env:
           CI: true
