--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,6 +23,8 @@ jobs:
 
       - run: npm install
       - run: npm run build --if-present
+      - run: git status -uno -u
+      - run: git stash
       - name: FTP Deploy
         uses: SamKirkland/FTP-Deploy-Action@4.3.0
         with:
