--- a/.github/workflows/nodejs.yml.back.yml
+++ b/.github/workflows/nodejs.yml.back.yml
@@ -23,14 +23,14 @@ jobs:
 
       - run: npm install
       - run: npm run build --if-present
-      - run: git status -uno -u
-      - run: git stash
+
       - name: FTP Deploy
-        uses: SamKirkland/FTP-Deploy-Action@4.3.0
+        uses: SamKirkland/FTP-Deploy-Action@4.0.0
         with:
           server: ${{ secrets.ftp_server }}
           username: ${{ secrets.ftp_user }}
           password: ${{ secrets.ftp_pwd }}
           local-dir: ./build/
+          server-dir: ./htdocs/
         env:
           CI: true
