--- a/.github/workflows/nodejs.yml.back.yml
+++ b/.github/workflows/nodejs.yml.back.yml
@@ -23,7 +23,9 @@ jobs:
 
       - run: npm install
       - run: npm run build --if-present
-
+      - run: git status -uno -u
+      - run: git stash
+      
       - name: FTP Deploy
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
         with:
