--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,13 +23,14 @@ jobs:
 
       - run: npm install
       - run: npm run build --if-present
+      
 
       - name: FTP Deploy
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
         with:
           server: wh-nsebvenxffxyu90uaaa.my3w.com
-          username: ${{ secrets.ftp_user }}
-          password: ${{ secrets.ftp_pwd }}
+          username: ${{ secrets.FTP_USER }}
+          password: ${{ secrets.FTP_PWD }}
           local-dir: ../build/
           server-dir: /htdocs/
         env:
